--- a/Game/Game.vcxproj
+++ b/Game/Game.vcxproj
@@ -152,6 +152,7 @@
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="Fruit.cpp" />
     <ClCompile Include="GameState.cpp" />
+    <ClCompile Include="HUD.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="SplashState.cpp" />
@@ -162,6 +163,7 @@
     <ClInclude Include="Entity.h" />
     <ClInclude Include="Fruit.h" />
     <ClInclude Include="GameState.h" />
+    <ClInclude Include="HUD.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="SplashState.h" />
     <ClInclude Include="State.h" />
