--- a/Game/Game.vcxproj
+++ b/Game/Game.vcxproj
@@ -155,6 +155,7 @@
     <ClCompile Include="Fruit.cpp" />
     <ClCompile Include="GameState.cpp" />
     <ClCompile Include="HUD.cpp" />
+    <ClCompile Include="Life.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="SplashState.cpp" />
@@ -168,6 +169,7 @@
     <ClInclude Include="Fruit.h" />
     <ClInclude Include="GameState.h" />
     <ClInclude Include="HUD.h" />
+    <ClInclude Include="Life.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="SplashState.h" />
     <ClInclude Include="State.h" />
