--- a/Game/Game.vcxproj.filters
+++ b/Game/Game.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClCompile Include="Coin.cpp">
       <Filter>Source Files\Entities</Filter>
     </ClCompile>
+    <ClCompile Include="Life.cpp">
+      <Filter>Source Files\Entities</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Definitions.h">
@@ -93,6 +96,9 @@
       <Filter>Header Files\Entities</Filter>
     </ClInclude>
     <ClInclude Include="Collectible.h">
+      <Filter>Header Files\Entities</Filter>
+    </ClInclude>
+    <ClInclude Include="Life.h">
       <Filter>Header Files\Entities</Filter>
     </ClInclude>
   </ItemGroup>
