--- a/Game/Game.vcxproj.filters
+++ b/Game/Game.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClCompile Include="Life.cpp">
       <Filter>Source Files\Entities</Filter>
     </ClCompile>
+    <ClCompile Include="MenuState.cpp">
+      <Filter>Source Files\States</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Definitions.h">
@@ -100,6 +103,9 @@
     </ClInclude>
     <ClInclude Include="Life.h">
       <Filter>Header Files\Entities</Filter>
+    </ClInclude>
+    <ClInclude Include="MenuState.h">
+      <Filter>Header Files\States</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
