--- a/Game/Game.vcxproj.filters
+++ b/Game/Game.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClCompile Include="MenuState.cpp">
       <Filter>Source Files\States</Filter>
     </ClCompile>
+    <ClCompile Include="TimeBonus.cpp">
+      <Filter>Source Files\Entities</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Definitions.h">
@@ -106,6 +109,9 @@
     </ClInclude>
     <ClInclude Include="MenuState.h">
       <Filter>Header Files\States</Filter>
+    </ClInclude>
+    <ClInclude Include="TimeBonus.h">
+      <Filter>Header Files\Entities</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
