--- a/Game/Game.vcxproj.filters
+++ b/Game/Game.vcxproj.filters
@@ -81,6 +81,9 @@
     <ClCompile Include="EndGameState.cpp">
       <Filter>Source Files\States</Filter>
     </ClCompile>
+    <ClCompile Include="ScoreMultiplier.cpp">
+      <Filter>Source Files\Entities</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Definitions.h">
@@ -130,6 +133,9 @@
     </ClInclude>
     <ClInclude Include="EndGameState.h">
       <Filter>Header Files\States</Filter>
+    </ClInclude>
+    <ClInclude Include="ScoreMultiplier.h">
+      <Filter>Header Files\Entities</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
